--- a/package.json
+++ b/package.json
@@ -19,36 +19,25 @@
   "homepage": "",
   "dependencies": {
     "async": "^3.2.0",
-    "aws-sdk": "^2.778.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "country-state-city": "^1.0.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^4.3.0",
     "generic-pool": "^3.7.1",
     "into-stream": "^6.0.0",
-    "js-sha1": "^0.6.0",
-    "kue": "^0.11.6",
     "md5": "^2.3.0",
-    "moment": "^2.27.0",
     "mustache": "^4.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nconf": "^0.10.0",
     "node-exceptions": "^4.0.1",
     "nodemailer": "^6.4.14",
-    "pdf-creator-node": "^1.4.1",
-    "rand-token": "^1.0.1",
     "redis": "^3.0.2",
-    "request": "^2.88.2",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
-    "twilio": "^3.49.2",
     "underscore": "^1.11.0",
     "urlencode": "^1.1.0",
-    "winston": "^3.3.3",
-    "xml-js": "^1.6.11",
-    "xml-parse": "^0.4.0"
+    "winston": "^3.3.3"
   }
 }
